--- a/gallery.html
+++ b/gallery.html
@@ -89,7 +89,7 @@
             <div class="gallery">
                 <a href="images/001.jpg" data-lightbox="mygallery" data-title="Main (right) and Guest (left) Cabins"><img src="images/001.jpg" alt=""></a>
                 <a href="images/002.jpg" data-lightbox="mygallery" data-title="Main Cabin"><img src="images/002.jpg" alt=""></a>
-                <a href="images/003.jpg" data-lightbox="mygallery" data-title="Main Cabin"><img src="images/003.jpg" alt=""></a>
+                <a href="images/003.JPG" data-lightbox="mygallery" data-title="Main Cabin"><img src="images/003.JPG" alt=""></a>
                 <a href="images/004.jpg" data-lightbox="mygallery" data-title="Courtyard including firepit and guest cabin"><img src="images/004.jpg" alt=""></a>
                 <a href="images/005.jpg" data-lightbox="mygallery" data-title="Living Room - Main Cabin"><img src="images/005.jpg" alt=""></a>
                 <a href="images/006.jpg" data-lightbox="mygallery" data-title="Living Room - Main Cabin"><img src="images/006.jpg" alt=""></a>
@@ -98,7 +98,7 @@
                 <a href="images/009.jpg" data-lightbox="mygallery" data-title="Kitchen - Main Cabin"><img src="images/009.jpg" alt=""></a>
                 <a href="images/010.jpg" data-lightbox="mygallery" data-title="Kitchen - Main Cabin"><img src="images/010.jpg" alt=""></a>
                 <a href="images/011.jpg" data-lightbox="mygallery" data-title="Loft - Main Cabin"><img src="images/011.jpg" alt=""></a>
-                <a href="images/012.jpg" data-lightbox="mygallery" data-title="Loft/Balcony Access - Main Cabin"><img src="images/012.jpg" alt=""></a>
+                <a href="images/012.JPG" data-lightbox="mygallery" data-title="Loft/Balcony Access - Main Cabin"><img src="images/012.JPG" alt=""></a>
                 <a href="images/013.jpg" data-lightbox="mygallery" data-title="Bathroom - Main Cabin"><img src="images/013.jpg" alt=""></a>
                 <a href="images/014.jpg" data-lightbox="mygallery" data-title="The Ranch"><img src="images/014.jpg" alt=""></a>
                 <a href="images/015.jpg" data-lightbox="mygallery" data-title="Old Wagon and Main Cabin"><img src="images/015.jpg" alt=""></a>
@@ -138,7 +138,7 @@
                 <a href="images/049.jpg" data-lightbox="mygallery" data-title="Historic Sheldon R. Larson Ranch"><img src="images/049.jpg" alt=""></a>
                 <a href="images/050.jpg" data-lightbox="mygallery" data-title="The ranch in the winter"><img src="images/050.jpg" alt=""></a>
                 <a href="images/051.jpg" data-lightbox="mygallery" data-title="Gunnison Reservoir"><img src="images/051.jpg" alt=""></a>
-                <a href="images/052.jpg" data-lightbox="mygallery" data-title="Gunnison Reervoir"><img src="images/052.jpg" alt=""></a>
+                <a href="images/052.JPG" data-lightbox="mygallery" data-title="Gunnison Reervoir"><img src="images/052.JPG" alt=""></a>
                 <a href="images/053.jpg" data-lightbox="mygallery" data-title="ATVing on the Arapeen Trails!"><img src="images/053.jpg" alt=""></a>
                 <a href="images/054.jpg" data-lightbox="mygallery" data-title="Sunset in the mountains!"><img src="images/054.jpg" alt=""></a>
                 <a href="images/055.jpg" data-lightbox="mygallery" data-title="Box Canyon hike"><img src="images/055.jpg" alt=""></a>
@@ -163,7 +163,7 @@
                 <a href="images/074.jpg" data-lightbox="mygallery" data-title="Wedding at the ranch"><img src="images/074.jpg" alt=""></a>
                 <a href="images/075.jpg" data-lightbox="mygallery" data-title="ATVing on the Arapeen trails"><img src="images/075.jpg" alt=""></a>
                 <a href="images/076.jpg" data-lightbox="mygallery" data-title="Views on the Arapeent trail system"><img src="images/076.jpg" alt=""></a>
-                <a href="images/077.jpg" data-lightbox="mygallery" data-title="Your happy guardian Koda on the lake!"><img src="images/077.jpg" alt=""></a>
+                <a href="images/077.JPG" data-lightbox="mygallery" data-title="Your happy guardian Koda on the lake!"><img src="images/077.JPG" alt=""></a>
                 
             </div>
         </div>
