--- a/mainCabin.html
+++ b/mainCabin.html
@@ -105,7 +105,7 @@
                 <div class="cycle-caption cabin-image-caption"></div>
 
                 <img class="cabin-image-carousel-img" src="images/002.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/003.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/003.JPG" alt="">
                 <img class="cabin-image-carousel-img" src="images/001.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/004.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/005.jpg" alt="">
@@ -115,7 +115,7 @@
                 <img class="cabin-image-carousel-img" src="images/009.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/010.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/011.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/012.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/012.JPG" alt="">
                 <img class="cabin-image-carousel-img" src="images/013.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/014.jpg" alt="">
                 <img class="cabin-image-carousel-img" src="images/015.jpg" alt="">
