atv.html update
Mainly updated the ATV attractions page

--- a/gallery.html
+++ b/gallery.html
@@ -164,6 +164,7 @@
                 <a href="images/075.jpg" data-lightbox="mygallery" data-title="ATVing on the Arapeen trails"><img src="images/075.jpg" alt=""></a>
                 <a href="images/076.jpg" data-lightbox="mygallery" data-title="Views on the Arapeent trail system"><img src="images/076.jpg" alt=""></a>
                 <a href="images/077.JPG" data-lightbox="mygallery" data-title="Your happy guardian Koda on the lake!"><img src="images/077.JPG" alt=""></a>
+                <a href="images/078.JPG" data-lightbox="mygallery" data-title="Julius Flat Reservoir in the Arapeen Trail System"><img src="images/078.JPG" alt=""></a>
                 
             </div>
         </div>
