--- a/attractions.html
+++ b/attractions.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset=utf-8>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Attractions near Sheldon R. Larson Ranch</title>
+        <title>Attractions near Sheldon R. Larson Ranch</title> <!--Changes the title that appear on the browser-->
         <link rel="icon" href="images/icons/icon.png">
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
@@ -12,9 +12,9 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a> <!--This is the Sheldon R Larson ranch in top left corner-->
             </div>
-            <ul>
+            <ul> <!--This is the navigation menu list-->
                 <li><a href="bookNow.html">Book Now</a></li>
                 <li><a href="overview.html">About Us <span><img src="images/icons/chevron-down.svg" height="10" width="7" alt="down arrow icon"/></span></a>
                     <ul>
@@ -78,15 +78,15 @@
                 </ul>
             </div>
         </aside>
-        <div id="overlay"></div>
+        <div id="overlay"></div> <!--Overlay for deselecting menu-->
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt=""> <!--background image-->
         </div>    
 
         <div class="overview-container">
             <h1>Area Attractions</h1>
-            <p>The beautiful Sanpete valley has so much to offer, from the world famous Arapeen trail system to its long, rich history! We've compiled a short list of our favorite activities below to get you started on planning your trip. But really, you can't go wrong with any of these activites, so follow the links to learn more about what this area has to offer and get started on your next vacation!</p>
+            <p>The beautiful Sanpete valley has much to offer, from the world famous Arapeen trail system to its long, rich history! We've compiled a short list of our favorite activities below to get you started on planning your trip. But really, you can't go wrong with any of these activites!Learn more about what the gorgeous Sanpete valley has to offer and get started on your next vacation with us!</p>
 
             <!--ATV-->
             <div class="attractions-overview-container">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="atv.html"><h3>ATV</h3></a>
-                    <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. So from your motorcycle to side-by-side, bring your ATV and enjoy the pristine landscape Sanpete Valley has to offer.</p>
+                    <p>Being minutes from the world famous Arapeen trail system, you have over 350,000 acres of interconnecting, beautiful mountain trails. From a motorcycle to a side-by-side, bring your ATV and enjoy the endless miles of pristine landscape Sanpete Valley has to offer.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="atv.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="rockClimbing.html"><h3>Rock Climbing</h3></a>
-                    <p>The renowned climbing of Maple Canyon is just minutes away from our cabins. Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to Alex Honnold!</p>
+                    <p>The renowned climbing of Maple Canyon is just minutes away from our cabins! Climbers from around the world come to test their skills on Maple Canyon’s unique cobblestone cliffs. With hundreds of climbs, it's easy to find a climb for everyone from novice to Alex Honnold!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="rockClimbing.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="snowmobiling.html"><h3>Snowmobiling</h3></a>
-                    <p>"Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County" <em>-SnoWest magazine</em>. Enjoy countless miles of untouched powder and bowls that offer some of the best backcountry snowmobiling in the state!</p>
+                    <p>"Boondocker’s Heaven- If there was ever a place on earth that could lay claim to that title, it would have to be Utah’s Sanpete County" <em>-SnoWest magazine</em>. Enjoy countless miles of untouched powder and bowls that offer some of the best backcountry snowmobiling in the country!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="snowmobiling.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="attractions-overview-text">
                     <a href="otherAttractions.html"><h3>And So Much More</h3></a>
-                    <p>From state parks to boating and snowkiting, Sanpete valley is an outdoor paradise! There is something here for everyone, including a nearly fully intact Columbian mammoth that was unearthed here in 1988, aquatic centers, and old-fashioned drive-in movies with burgers and fries.</p>
+                    <p>From state parks to boating and snowkiting, Sanpete valley is an vacation paradise! There is something here for everyone, including a nearly fully intact Columbian mammoth that was unearthed here in 1988, aquatic centers, and old-fashioned drive-in movies with burgers and fries.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="otherAttractions.html"><p>Click here</p><p>for more</p><p>information</p></a>
