--- a/atv.html
+++ b/atv.html
@@ -86,8 +86,8 @@
 
         <div class="overview-container">
             <h1>ATV Trails</h1>
-            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful, pristine ATV trails for ATV's of all sizes. The towns in Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or or looking at more free and purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
-            <p>PLEASE NOTE: The numbers in the trail recommendations below refer to trail designations on the <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a>. Circled numbers indicate an easy trail, whereas a square indicates a moderate trail, and a diamond indicates a difficult trail. The numbers in red circles refer to GPS intersection points given on the map. All of these routes are great single-day rides between 40-60 miles with more information listed on the map itself! I recommend getting the purchasable <a href="https://www.utahatvtrails.org/store/p1/Deluxe_Arapeen_OHV_Trail_Map.html" target="_blank">deluxe map</a> (we have a cabin copy as well!) or exploring  <a href="http://sanpete.com/pages/atv" target="_blank">Sanpete.com</a> for more information.</p>
+            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful ATV trails for ATV's of all sizes. The towns in Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from our cabin doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or looking at more free and purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
+            <p>PLEASE NOTE: The numbers in the trail recommendations below refer to trail designations on the <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a>. Circled numbers indicate an easy trail, whereas a square indicates a moderate trail, and a diamond indicates a difficult trail. The numbers in red circles refer to GPS intersection points given on the map. All of these routes are great single-day rides between 40-60 miles with more information listed on the map itself! We recommend getting the purchasable <a href="https://www.utahatvtrails.org/store/p1/Deluxe_Arapeen_OHV_Trail_Map.html" target="_blank">deluxe map</a> (we have a cabin copy as well!) or exploring <a href="http://sanpete.com/pages/atv" target="_blank">Sanpete.com</a> for more information.</p>
             
             <!--Ephraim Canyon-->
             <div class="attractions-overview-container">
@@ -97,7 +97,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Lake Hill to Jet Fox Res.</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 48 miles<i class="fas fa-mountain hiking-icon"></i> <span class="square-number">37</span> <span class="square-number-1">3</span> <span class="circle-number red-color">F</span> <span class="square-number">33</span> <span class="square-number">32</span> <span class="square-number-1">3</span></p>
-                    <p>This is our favorite single-day ride up the gorgeous Ephraim canyon with some of the best views we can offer! Start at Lake Hill and finish in Manti and use the back road west of Manti to get to our cabins, or just bring it around for a loop trail!</p>
+                    <p>This is our favorite single-day ride up Ephraim canyon with some of the best views we can offer! Start at Lake Hill and finish in Manti and use the back road west of Manti to get to our cabins, or just bring it around for a loop trail!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -110,9 +110,9 @@
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/miller-flat.jpg" alt=""></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
-                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Miller Flat Loop</h3></a>
+                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Miller's Flat Loop</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 58 miles<i class="fas fa-mountain hiking-icon"></i> <span class="circle-number-2">41</span> <span class="circle-number">1</span> <span class="circle-number-2">12</span> <span class="square-number">0014</span> <span class="circle-number-2">51</span> <span class="circle-number red-color">A</span> <span class="circle-number">1</span></p>
-                    <p>This is a fun and easy loop trail up Mt. Pleasant and Fairview canyons that pass by several gorgeous lakes and reservoirs! You will also pass by the Lake Canyon trail system and explore even more trails in a beautiful part of the forest!</p>
+                    <p>This is a fun and easy loop trail up Mt. Pleasant and Fairview canyons that pass by several gorgeous lakes and reservoirs! You will also pass by the Lake Canyon trail system and can explore even more trails in a beautiful part of the forest!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -127,7 +127,7 @@
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Manti Canyon</h3></a>
                     <p><i class="fas fa-route hiking-icon-left"></i> 41 miles<i class="fas fa-mountain hiking-icon"></i> <span class="square-number-1">3</span> <span class="circle-number red-color">F</span> <span class="square-number">73</span> <span class="square-number">72</span> <span class="circle-number red-color">G</span> <span class="square-number-1">3</span></p>
-                    <p>Another one of our favorite loop trails where you can just depart from our cabins! This loop trail passes through one of the prettiest parts of the Manti-Lasal National Forest and offers amazing panoramic views!</p>
+                    <p>Another one of our favorite loop trails where you can simply depart from our cabins! This loop trail passes through one of the prettiest parts of the Manti-Lasal National Forest and offers amazing panoramic views!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -155,7 +155,7 @@
                 <li><a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com ATV Maps</a></li>
                 <li><a href="http://sanpete.com/pages/atv" target="_blank">Sanpete.com ATV Info</a></li>
                 <li><a href="http://www.hikesandlakes.com/mantilasal.html" target="_blank">Hikes and Lakes</a></li>
-                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/ohv/?recid=72816&actid=93" target="_blank">Forest Service</li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/ohv/?recid=72816&actid=93" target="_blank">Forest Service</a></li>
                 <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/ohv/?recid=72816&actid=93" target="_blank">Rider Planet</a></li>
                 <li>Additional trail maps available at our cabins!</li>
             </ul>
