--- a/bookNow.html
+++ b/bookNow.html
@@ -110,7 +110,7 @@
             <!-- Step One Completed -->
             <div id="step-one-done">
               <p id= "step-one-done-cabin">*Please select which cabin*</p>
-              <p id= "step-one-done-date-range">*Please select the desired dates for you stay*</p>
+              <p id= "step-one-done-date-range">*Please select the dates for you stay*</p>
               <i class="fas fa-moon moon-icon"></i>
               <p id= "step-one-done-nights">- nights</p>
             </div>
