--- a/availability.html
+++ b/availability.html
@@ -102,8 +102,8 @@
 
         <!--JQuery and JavaScript Declarations-->
         <script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.2.1/dist/jquery.min.js"></script>
-       <!-- <script src='js/main.js'></script> -->
-       <script src="js/bundle.js"></script>
+        <script src='js/main.js'></script>
+        <script src="js/bundle.js"></script>
         <script src='js/availability.js'></script>
         
     </body>
