--- a/mainCabin.html
+++ b/mainCabin.html
@@ -160,6 +160,7 @@
                 <h2 id="main-cabin-amenities">Amenities</h2>
                 <div class="amenities-container">
                     <p class="amenities">- A/C</p>
+		    <p class="amenities">- Free Washer/Dryer</p>
                     <p class="amenities">- Fridge/Freezer</p>
                     <p class="amenities">- Oven/Stove</p>
                     <p class="amenities">- Dishwasher</p>
