--- a/bookNow.html
+++ b/bookNow.html
@@ -229,7 +229,7 @@
                     <h1 id="total-cost">$<span id="confirm-cost"></span></h1>
                     <p id="cost-calculator">- night(s) @ $-.--/night</p>
                     <p id="final-note">*A non-refundable cleaning and security deposit will be required upon confirmation of your booking in order to hold your reservation. This deposit goes toward your total and the remainder will be due upon arrival.</p><br>
-                    <p id="final-note2">We will contact you by email as soon as possible to confirm your booking! If in a rush, please also follow up at (435) 340-0075 or SheldonRLarsonRanch@gmail.com</p>
+                    <p id="final-note2">We will contact you by email as soon as possible to confirm your booking! If you have any questions, contact us at (435) 340-0075 or SheldonRLarsonRanch@gmail.com</p>
                     
                     <form id="step-four-form" action="https://formspree.io/brock.larson0725@gmail.com" method="POST" target="_blank">
                         <div id="step-four-form-hidden">
