terms and conditions addition
added checkbox on bookNow page for terms and condition agreement. Other general spelling error corrections

--- a/bookNow.html
+++ b/bookNow.html
@@ -182,7 +182,11 @@
                 <div class="phone-container">
                   <i class="fas fa-phone phone-icon"></i>
                   <label id="phone-label">Phone Number</label>
-                  <input id="guest-phone" type="tel"/>
+                  <input id="guest-phone" type="tel"/><br>
+                  <label class="checkbox-label">
+                    <input id="safety-checkbox" type="checkbox"><p id="safety-agreement">I have read and agree to the <a href="./downloadables/terms and conditions.pdf" target="_blank">terms and conditions</a> and <a href="./downloadables/terms and conditions.pdf" target="_blank">safety waiver</a></p>
+                    <span class="checkbox-custom"></span>
+                  </label>
                 </div>
               </div>
               <button id="previous-btn-2">PREVIOUS</button>
