--- a/mainCabin.html
+++ b/mainCabin.html
@@ -156,7 +156,7 @@
                 <h4>The Neighborhood</h4>
                 <p>These cabins are located outside a small town and are very quiet and secluded with mountains on the east and west. We are located on a working ranch so there are farm animals on neighboring property.</p>
                 <h4>Getting Around</h4>
-                <p>There is plenty of parking for your cars, trailers, ATVs, snowmobiles, etc. at our ranch. The towns in Sanpete county are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Please note that the speed limit on city streets is 15mph.</p>
+                <p>There is plenty of parking for your cars, trailers, ATVs, snowmobiles, etc. at our ranch. The towns in Sanpete county are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from your front doorstep! Please note that the speed limit on city streets is 15mph and helmets are required.</p>
                 <h2 id="main-cabin-amenities">Amenities</h2>
                 <div class="amenities-container">
                     <p class="amenities">- A/C</p>
@@ -188,7 +188,7 @@
                 <h4>Refund/Payment</h4>
                 <p>25% of payment is required to reserve your booking. This is a non-refundable security and cleaning deposit. The other 75% is due upon arrival at the cabins.</p>
                 <h4>Pet Policy</h4>
-                <p>We do allow pets at our cabins! There is a large lawn and courtyard area for the pets to run free. There is also a fenced in area on the soutch side of the main cabin that the dogs may use. We do require that you clean up after your pets!</p>
+                <p>We do allow pets at our cabins! There is a large lawn and courtyard area for the pets to run free. There is also a fenced in area on the south side of the main cabin that the dogs may use. We do require that you clean up after your pets!</p>
                 <p>Your pets may stay in the cabins but require that pets are not allowed on any furniture and may not "rough-house" inside the cabins. At night we do ask that your pets are placed in a kennel while you sleep. Please help us by abiding by this policy so that other guests can enjoy our cabins. These cabins have been in our family for over 100 years and we try everything we can to ensure the history and experience can be preserved for all our guests to enjoy!</p>
                 <p>There is an additional $20/night charge added for each pet. This helps us cover the additional cleaning required so that our cabins may be clean for the next guests!</p>
                 <h4>Damage Policy</h4>
