--- a/gallery.html
+++ b/gallery.html
@@ -162,9 +162,9 @@
                     <a href="images/073.jpg" data-lightbox="mygallery" data-title="WEDDING AT THE RANCH"><img src="images/073.jpg" alt=""></a>
                     <a href="images/074.jpg" data-lightbox="mygallery" data-title="WEDDING AT THE RANCH"><img src="images/074.jpg" alt=""></a>
                     <a href="images/075.jpg" data-lightbox="mygallery" data-title="ATVING ON THE ARAPEEN TRAILS"><img src="images/075.jpg" alt=""></a>
-                    <a href="images/076.jpg" data-lightbox="mygallery" data-title="VIEWS ON THE ARAPEENT TRAIL SYSTEM"><img src="images/076.jpg" alt=""></a>
+                    <a href="images/076.jpg" data-lightbox="mygallery" data-title="VIEWS ON THE ARAPEEN TRAIL SYSTEM"><img src="images/076.jpg" alt=""></a>
                     <a href="images/077.JPG" data-lightbox="mygallery" data-title="YOUR HAPPY GUARDIAN KODA ON THE LAKE!"><img src="images/077.JPG" alt=""></a>
-                    <a href="images/078.JPG" data-lightbox="mygallery" data-title="JULIUS FLAT RESERVOIR IN THE ARAPEEN TRAIL SYSTEM"><img src="images/078.JPG" alt=""></a>
+                    <a href="images/078.JPG" data-lightbox="mygallery" data-title="JULIUS FLAT RESERVOIR IN THE ARAPEEN TRAIL SYSTEM"><img src="images/078.jpg" alt=""></a>
             </div>
         </div>
       
