form submission update
added a statement in the form submission indicating to us whether they've agreed to the safety waiver or not

--- a/bookNow.html
+++ b/bookNow.html
@@ -252,6 +252,7 @@
                             <input id="confirm-message0" type="text" name="Message" readonly>
                             <input id="confirm-cost0" type="text" name="Total Cost" readonly>
                             <input id="cost-calculator0" type="text" name="Cost Calculation" readonly>
+                            <input id="safety-agree0" type="text" name="Agreed to Terms and Conditions and Safety Waiver" readonly>
                         </div>
                         <div id="previous-btn-4">PREVIOUS</div>
                         <button id="continue-btn-4" type="submit">SUBMIT</button>
