--- a/overview.html
+++ b/overview.html
@@ -130,7 +130,7 @@
             <div class="overview-text-container">
                 <div>
                     <h1>The Great Outdoors</h1><br>
-                    <p>Imagine a quiet peaceful night by the fire, gazing at the stars from he front porch of your country cabin, all after a day of four-wheeling, snowmobiling, or hiking through arguably the prettiest mountain range in the country.
+                    <p>Imagine a quiet peaceful night by the fire, gazing at the stars from the front porch of your country cabin, all after a day of four-wheeling, snowmobiling, or hiking through arguably the prettiest mountain range in the country.
                     <br><br>Our cabins are the gateway to the Manti-La Sal National Forest, Maple Canyon, Arapeen trail system, and more! Ephraim is also an ATV-friendly town, meaning you can cruise through town on your ATV!
                     <br><br>Bring your horses, ATVs, RVs, snowmobiles, or whatever else you need, we have plenty of room for you to park them. Although, with how close you will be to everything, we bet your toys won't spend much time parked!</p>
                 </div>
