--- a/bookNow.html
+++ b/bookNow.html
@@ -184,7 +184,7 @@
                   <label id="phone-label">Phone Number</label>
                   <input id="guest-phone" type="tel"/><br>
                   <label class="checkbox-label">
-                    <input id="safety-checkbox" type="checkbox"><p id="safety-agreement">I have read and agree to the <a href="./downloadables/terms and conditions.pdf" target="_blank">terms and conditions</a> and <a href="./downloadables/terms and conditions.pdf" target="_blank">safety waiver</a></p>
+                    <input id="safety-checkbox" type="checkbox"><p id="safety-agreement">I have read and agree to the <a href="./downloadables/terms and conditions.pdf" target="_blank">terms and conditions</a> and <a href="./downloadables/terms and conditions.pdf" target="_blank">liability waiver</a></p>
                     <span class="checkbox-custom"></span>
                   </label>
                 </div>
@@ -252,7 +252,7 @@
                             <input id="confirm-message0" type="text" name="Message" readonly>
                             <input id="confirm-cost0" type="text" name="Total Cost" readonly>
                             <input id="cost-calculator0" type="text" name="Cost Calculation" readonly>
-                            <input id="safety-agree0" type="text" name="Agreed to Terms and Conditions and Safety Waiver" readonly>
+                            <input id="safety-agree0" type="text" name="Agreed to Terms and Conditions and Liability Waiver" readonly>
                         </div>
                         <div id="previous-btn-4">PREVIOUS</div>
                         <button id="continue-btn-4" type="submit">SUBMIT</button>
