--- a/bookNow.html
+++ b/bookNow.html
@@ -184,7 +184,7 @@
                   <label id="phone-label">Phone Number</label>
                   <input id="guest-phone" type="tel"/><br>
                   <label class="checkbox-label">
-                    <input id="safety-checkbox" type="checkbox"><p id="safety-agreement">I have read and agree to the <a href="./downloadables/terms and conditions.pdf" target="_blank">terms and conditions</a> and <a href="./downloadables/terms and conditions.pdf" target="_blank">liability waiver</a></p>
+                    <input id="safety-checkbox" type="checkbox"><p id="safety-agreement">I have read and agree to this <a href="./downloadables/liability waiver.pdf" target="_blank">Release & Waiver of Liability</a>.</p>
                     <span class="checkbox-custom"></span>
                   </label>
                 </div>
